# wscearth

./: .gitignore  Dockerfile  Makefile  README.md  app.py  bitbucket-pipelines.yml  controlstops.yaml  localtest.kml  old.setup.cfg.old  pyproject.toml  route_2023.txt  route_2025.txt  setup.cfg
.github/workflows/: docker-publish.yml  pylint.yml
src/wscearth/: __init__.py  __main__.py  earth.py  influx.py  route.py  views.py
src/wscearth/static/: positions.js
src/wscearth/templates/: positions.js.j2  positions_map.html
templates/: positions_map.html
